Camino only: Bug 349979 - Dock menu items are shown thrice on OS X 10.3. r=smorgan sr=pink