camino/src/bookmarks/BookmarkMenu.h
@@ -66,6 +66,6 @@
 - (NSMenuItem*)itemBeforeCustomItems;
 
 // do an explicit rebuild
-- (void)rebuildMenuIncludingSubmenus:(BOOL)includeSubmenus;
+- (void)rebuildMenuIncludingSubmenus:(BOOL)includeSubmenus withAlternates:(BOOL)includeAlternates;
 
 @end
